--- a/elements-obligatoire/style.css
+++ b/elements-obligatoire/style.css
@@ -151,17 +151,17 @@ header nav ul {
 }
 
 @media screen and (max-width: 768px) {
-  header nav ul li {
+  header nav ul {
     padding-right: 10px;
   }
 }
 
-header nav ul li a {
+header nav ul a {
   color: #CCC;
   text-decoration: none;
 }
 
-header nav ul li a:hover {
+header nav ul a:hover {
   color: #DF0000;
 }
 
