--- a/images/style.css
+++ b/images/style.css
@@ -97,3 +97,15 @@ a {
 a:hover {
   text-decoration: underline;
 }
+
+.sr-only{
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
